src/components/TestimonialWrapper/TestimonialWrapper.scss
@import '~/sass/variables';
@import './TestimonialCard/TestimonialCard';

$_button-size: to-rem(40);

.carousel-wrapper {
  $_this: &;

  margin-left: to-rem(-$_shadow-size);

  &__title {
    margin: 0 0 to-rem(67);
    text-align: right;
  }

  &__navigation {
    column-gap: to-rem(10);
    display: flex;
    margin-left: to-rem(20);
    margin-top: calc(-1rem - #{$_button-size});
    position: absolute;
  }

  &__button {
    border-radius: 50%;
    border-style: none;
    color: var(--primary-color);
    height: $_button-size;
    padding: 0;
    transition: color $transition-time-200 ease;
    width: $_button-size;

    &:focus {
      outline: 2px solid var(--button-hover);
    }

    &:focus-visible {
      outline: 4px dashed $orange-200;
    }

    &:disabled > #{$_this}__arrow:hover {
      color: $charcoal-100;
      fill: $white-400;
    }

    &:disabled {
      color: $charcoal-100;
      cursor: not-allowed;
      outline: none;
    }
  }

  &__arrow {
    fill: $white-400;
    height: 100%;
    transform: rotate(90deg);
    transition: color $transition-time-200 ease, fill $transition-time-200 ease;
    width: 100%;

    &:hover {
      color: $white-400;
      fill: var(--button-hover);
    }

    &:focus,
    &:focus-visible,
    &:active {
      color: $white-400;
      fill: var(--button-active);
    }

    &--next {
      transform: rotate(270deg);
    }
  }

  &__slider:focus {
    outline: 4px dashed $orange-200;
  }

  &__card {
    height: 100% !important; //overriding carousel inline styles
    margin-bottom: to-rem($_shadow-size);
    margin-left: to-rem($_shadow-size);
    width: initial !important; //overriding carousel inline styles
  }

  &__slide-focus-ring {
    border-radius: $_border-radius-size;
    outline: 4px dashed $orange-200;
  }
}

